# qtafbclient

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qafbwebsocketclient.cpp  qtafbclient.pro  qwebsocketdebugmodel.cpp  qwebsocketdebugmodel.h  resources.qrc
cmake/: FindQScintilla.cmake
